# Cards-Classification

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg
classifier/: callbacks.py  constant.py  dataset.py  io_utils.py  layers.py  model.py  train.py
