[metadata]
name = image-classifier
version = 0.0.0
author = Diwakar Singh
author_email = diwakariitd@gmail.com
description = A PyTorch implementation of the Cards classifier
long_description = file: README.rst,
keywords =
    ML
    CV
python_requires = >=3.9
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy
    torch
    torchvision
    pytorch-lightning

[options.extras_require]
dev =
    black == 23.1.0
    flake8 == 6.0.0
    isort == 5.12.0
    mypy == 1.1.1
    pre-commit == 3.1.1
    types-requests
    types-setuptools
    types-toml
    types-typed-ast

[options.entry_points]
console_scripts =
    preprocess = classifier.dataset:main
