[metadata]
name = image-classifier
version = 0.0.0
author = Diwakar Singh
author_email = diwakariitd@gmail.com
description = A PyTorch implementation of the Cards classifier
long_description = file: README.rst,
keywords =
    ML
    CV
python_requires = >=3.9
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy
    torch
    torchvision
    lightning

[options.extras_require]
dev =
    black == 23.3.0
    flake8 == 6.0.0
    isort == 5.12.0
    mypy == 1.2.0
    pre-commit == 3.2.2
    types-requests
    types-setuptools
    types-toml
    types-typed-ast
    ipywidgets
    ipdb

[options.entry_points]
console_scripts =
    preprocess = classifier.dataset:main
